Practica5/build/classes/y.output
   0  $accept : list $end

   1  list :
   2       | list '\n'
   3       | list linea '\n'

   4  linea : exp ';'
   5        | stmt
   6        | linea exp ';'
   7        | linea stmt

   8  exp : VAR
   9      | NUMBER
  10      | VAR '[' initNum ']' '=' '{' listaDeListas '}'
  11      | VAR '=' exp
  12      | exp '*' exp
  13      | exp '+' exp
  14      | exp '-' exp
  15      | '(' exp ')'
  16      | exp COMP exp
  17      | exp DIFERENTES exp
  18      | exp MEN exp
  19      | exp MENI exp
  20      | exp MAY exp
  21      | exp MAYI exp
  22      | exp AND exp
  23      | exp OR exp
  24      | '!' exp
  25      | FNCT '[' exp ']'
  26      | RETURN exp
  27      | PARAMETRO
  28      | nombreProc '(' arglist ')'

  29  arglist :
  30          | exp
  31          | instrucciones ',' exp

  32  stmt : if_ '(' exp stop_ ')' '{' linea stop_ '}' ELSE '{' linea stop_ '}'
  33       | if_ '(' exp stop_ ')' '{' linea stop_ '}' stop_
  34       | while_ '(' exp stop_ ')' '{' linea stop_ '}' stop_
  35       | for_ '(' instrucciones stop_ ';' exp stop_ ';' instrucciones stop_ ')' '{' linea stop_ '}' stop_
  36       | funcion nombreProc '(' ')' '{' linea null_ '}'
  37       | procedimiento nombreProc '(' ')' '{' linea null_ '}'

  38  procedimiento : PROC

  39  funcion : FUNC

  40  nombreProc : VAR

  41  null_ :

  42  stop_ :

  43  if_ : IF

  44  while_ : WHILE

  45  for_ : FOR

  46  instrucciones :
  47                | exp
  48                | instrucciones ',' exp

  49  initNum : NUMBER

  50  listaDeListas : lista
  51                | listaDeListas '|' lista

  52  lista : NUMBER
  53        | lista ',' NUMBER

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . '\n'  (2)
	list : list . linea '\n'  (3)

	$end  accept
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	FUNC  shift 8
	RETURN  shift 9
	PARAMETRO  shift 10
	PROC  shift 11
	'!'  shift 12
	'\n'  shift 13
	'('  shift 14
	.  error

	linea  goto 15
	exp  goto 16
	stmt  goto 17
	nombreProc  goto 18
	if_  goto 19
	while_  goto 20
	for_  goto 21
	funcion  goto 22
	procedimiento  goto 23


state 2
	if_ : IF .  (43)

	.  reduce 43


state 3
	while_ : WHILE .  (44)

	.  reduce 44


state 4
	for_ : FOR .  (45)

	.  reduce 45


state 5
	exp : FNCT . '[' exp ']'  (25)

	'['  shift 24
	.  error


state 6
	exp : NUMBER .  (9)

	.  reduce 9


state 7
	exp : VAR .  (8)
	exp : VAR . '[' initNum ']' '=' '{' listaDeListas '}'  (10)
	exp : VAR . '=' exp  (11)
	nombreProc : VAR .  (40)

	'='  shift 25
	'['  shift 26
	COMP  reduce 8
	DIFERENTES  reduce 8
	MAY  reduce 8
	MEN  reduce 8
	MAYI  reduce 8
	MENI  reduce 8
	AND  reduce 8
	OR  reduce 8
	'+'  reduce 8
	'-'  reduce 8
	'*'  reduce 8
	';'  reduce 8
	']'  reduce 8
	'('  reduce 40
	')'  reduce 8
	','  reduce 8


state 8
	funcion : FUNC .  (39)

	.  reduce 39


state 9
	exp : RETURN . exp  (26)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 27
	nombreProc  goto 18


state 10
	exp : PARAMETRO .  (27)

	.  reduce 27


state 11
	procedimiento : PROC .  (38)

	.  reduce 38


state 12
	exp : '!' . exp  (24)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 28
	nombreProc  goto 18


state 13
	list : list '\n' .  (2)

	.  reduce 2


state 14
	exp : '(' . exp ')'  (15)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 29
	nombreProc  goto 18


state 15
	list : list linea . '\n'  (3)
	linea : linea . exp ';'  (6)
	linea : linea . stmt  (7)

	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	FUNC  shift 8
	RETURN  shift 9
	PARAMETRO  shift 10
	PROC  shift 11
	'!'  shift 12
	'\n'  shift 30
	'('  shift 14
	.  error

	exp  goto 31
	stmt  goto 32
	nombreProc  goto 18
	if_  goto 19
	while_  goto 20
	for_  goto 21
	funcion  goto 22
	procedimiento  goto 23


state 16
	linea : exp . ';'  (4)
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	COMP  shift 33
	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	';'  shift 44
	.  error


state 17
	linea : stmt .  (5)

	.  reduce 5


state 18
	exp : nombreProc . '(' arglist ')'  (28)

	'('  shift 45
	.  error


state 19
	stmt : if_ . '(' exp stop_ ')' '{' linea stop_ '}' ELSE '{' linea stop_ '}'  (32)
	stmt : if_ . '(' exp stop_ ')' '{' linea stop_ '}' stop_  (33)

	'('  shift 46
	.  error


state 20
	stmt : while_ . '(' exp stop_ ')' '{' linea stop_ '}' stop_  (34)

	'('  shift 47
	.  error


state 21
	stmt : for_ . '(' instrucciones stop_ ';' exp stop_ ';' instrucciones stop_ ')' '{' linea stop_ '}' stop_  (35)

	'('  shift 48
	.  error


state 22
	stmt : funcion . nombreProc '(' ')' '{' linea null_ '}'  (36)

	VAR  shift 49
	.  error

	nombreProc  goto 50


state 23
	stmt : procedimiento . nombreProc '(' ')' '{' linea null_ '}'  (37)

	VAR  shift 49
	.  error

	nombreProc  goto 51


state 24
	exp : FNCT '[' . exp ']'  (25)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 52
	nombreProc  goto 18


state 25
	exp : VAR '=' . exp  (11)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 53
	nombreProc  goto 18


state 26
	exp : VAR '[' . initNum ']' '=' '{' listaDeListas '}'  (10)

	NUMBER  shift 54
	.  error

	initNum  goto 55


state 27
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : RETURN exp .  (26)

	.  reduce 26


state 28
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : '!' exp .  (24)

	AND  shift 39
	OR  shift 40
	COMP  reduce 24
	DIFERENTES  reduce 24
	MAY  reduce 24
	MEN  reduce 24
	MAYI  reduce 24
	MENI  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	','  reduce 24


state 29
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : '(' exp . ')'  (15)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	COMP  shift 33
	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	')'  shift 56
	.  error


state 30
	list : list linea '\n' .  (3)

	.  reduce 3


state 31
	linea : linea exp . ';'  (6)
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	COMP  shift 33
	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	';'  shift 57
	.  error


state 32
	linea : linea stmt .  (7)

	.  reduce 7


state 33
	exp : exp COMP . exp  (16)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 58
	nombreProc  goto 18


state 34
	exp : exp DIFERENTES . exp  (17)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 59
	nombreProc  goto 18


state 35
	exp : exp MAY . exp  (20)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 60
	nombreProc  goto 18


state 36
	exp : exp MEN . exp  (18)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 61
	nombreProc  goto 18


state 37
	exp : exp MAYI . exp  (21)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 62
	nombreProc  goto 18


state 38
	exp : exp MENI . exp  (19)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 63
	nombreProc  goto 18


state 39
	exp : exp AND . exp  (22)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 64
	nombreProc  goto 18


state 40
	exp : exp OR . exp  (23)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 65
	nombreProc  goto 18


state 41
	exp : exp '+' . exp  (13)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 66
	nombreProc  goto 18


state 42
	exp : exp '-' . exp  (14)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 67
	nombreProc  goto 18


state 43
	exp : exp '*' . exp  (12)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 68
	nombreProc  goto 18


state 44
	linea : exp ';' .  (4)

	.  reduce 4


state 45
	exp : nombreProc '(' . arglist ')'  (28)
	arglist : .  (29)
	instrucciones : .  (46)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	')'  reduce 29
	','  reduce 46

	exp  goto 69
	nombreProc  goto 18
	arglist  goto 70
	instrucciones  goto 71


state 46
	stmt : if_ '(' . exp stop_ ')' '{' linea stop_ '}' ELSE '{' linea stop_ '}'  (32)
	stmt : if_ '(' . exp stop_ ')' '{' linea stop_ '}' stop_  (33)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 72
	nombreProc  goto 18


state 47
	stmt : while_ '(' . exp stop_ ')' '{' linea stop_ '}' stop_  (34)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	.  error

	exp  goto 73
	nombreProc  goto 18


state 48
	stmt : for_ '(' . instrucciones stop_ ';' exp stop_ ';' instrucciones stop_ ')' '{' linea stop_ '}' stop_  (35)
	instrucciones : .  (46)

	FNCT  shift 5
	NUMBER  shift 6
	VAR  shift 7
	RETURN  shift 9
	PARAMETRO  shift 10
	'!'  shift 12
	'('  shift 14
	';'  reduce 46
	','  reduce 46

	exp  goto 74
	nombreProc  goto 18
	instrucciones  goto 75


state 49
	nombreProc : VAR .  (40)

	.  reduce 40


state 50
	stmt : funcion nombreProc . '(' ')' '{' linea null_ '}'  (36)

	'('  shift 76
	.  error


state 51
	stmt : procedimiento nombreProc . '(' ')' '{' linea null_ '}'  (37)

	'('  shift 77
	.  error


state 52
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)
	exp : FNCT '[' exp . ']'  (25)

	COMP  shift 33
	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	']'  shift 78
	.  error


state 53
	exp : VAR '=' exp .  (11)
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	COMP  shift 33
	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	';'  reduce 11
	']'  reduce 11
	')'  reduce 11
	','  reduce 11


state 54
	initNum : NUMBER .  (49)

	.  reduce 49


state 55
	exp : VAR '[' initNum . ']' '=' '{' listaDeListas '}'  (10)

	']'  shift 79
	.  error


state 56
	exp : '(' exp ')' .  (15)

	.  reduce 15


state 57
	linea : linea exp ';' .  (6)

	.  reduce 6


state 58
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp COMP exp .  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	DIFERENTES  shift 34
	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	COMP  reduce 16
	'+'  reduce 16
	'-'  reduce 16
	'*'  reduce 16
	';'  reduce 16
	']'  reduce 16
	')'  reduce 16
	','  reduce 16


state 59
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp DIFERENTES exp .  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	MAY  shift 35
	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	COMP  reduce 17
	DIFERENTES  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	';'  reduce 17
	']'  reduce 17
	')'  reduce 17
	','  reduce 17


state 60
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp MAY exp .  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	MEN  shift 36
	MAYI  shift 37
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	COMP  reduce 20
	DIFERENTES  reduce 20
	MAY  reduce 20
	'+'  reduce 20
	'-'  reduce 20
	'*'  reduce 20
	';'  reduce 20
	']'  reduce 20
	')'  reduce 20
	','  reduce 20


state 61
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp MEN exp .  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	MENI  shift 38
	AND  shift 39
	OR  shift 40
	COMP  reduce 18
	DIFERENTES  reduce 18
	MAY  reduce 18
	MEN  reduce 18
	MAYI  reduce 18
	'+'  reduce 18
	'-'  reduce 18
	'*'  reduce 18
	';'  reduce 18
	']'  reduce 18
	')'  reduce 18
	','  reduce 18


state 62
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp MAYI exp .  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	MEN  shift 36
	MENI  shift 38
	AND  shift 39
	OR  shift 40
	COMP  reduce 21
	DIFERENTES  reduce 21
	MAY  reduce 21
	MAYI  reduce 21
	'+'  reduce 21
	'-'  reduce 21
	'*'  reduce 21
	';'  reduce 21
	']'  reduce 21
	')'  reduce 21
	','  reduce 21


state 63
	exp : exp . '*' exp  (12)
	exp : exp . '+' exp  (13)
	exp : exp . '-' exp  (14)
	exp : exp . COMP exp  (16)
	exp : exp . DIFERENTES exp  (17)
	exp : exp . MEN exp  (18)
	exp : exp . MENI exp  (19)
	exp : exp MENI exp .  (19)
	exp : exp . MAY exp  (20)
	exp : exp . MAYI exp  (21)
	exp : exp . AND exp  (22)
	exp : exp . OR exp  (23)

	AND  shift 39
	OR  shift 40
	COMP  reduce 19
	DIFERENTES  reduce 19
	MAY  reduce 19
	MEN  reduce 19
	MAYI  reduce 19
	MENI  reduce 19
	'+'  reduce 19
	'-'  reduce 19
	'*'  reduce 19
	';'  reduce 19
	']'  reduce 19
	')'  reduce 19
	','  reduce 19

